infra/EKS/kubernetes_manifests/assessment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: assessment
  name: assessment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assessment  
  template:
    metadata:      
      labels:
        app: assessment
    spec:
      serviceAccountName: sqs-access
      containers:
      - image: pavithravasudevan/assessment-service:0.0.1
        name: assessment
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: assessment
  name: assessment
spec:
  ports:
  - name: 8088-8088
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: assessment
  type: ClusterIP
status:
  loadBalancer: {}
