infra/EKS/kubernetes_manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: apigateway
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway  
  template:
    metadata:      
      labels:
        app: apigateway
    spec:
      
      containers:
      - image: pavithravasudevan/spring-cloud-gateway:0.0.1
        name: apigateway
       
---
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: apigateway
  name: apigateway
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
spec:
  ports:
  - name: 9090-9090
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: apigateway
  type: NodePort
status:
  loadBalancer: {}
