infra/EKS/kubernetes_manifests/mdm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: mdm
  name: mdm
spec:
  replicas: 1
 
  selector:
    matchLabels:
      app: mdm  
  template:
    metadata:      
      labels:
        app: mdm
    spec:
      serviceAccountName: cognito-access
      containers:
      - image: pavithravasudevan/administration-service:0.0.1
        name: mdm
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: mdm
  name: mdm
spec:
  ports:
  - name: 8090-8090
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: mdm
  type: ClusterIP
status:
  loadBalancer: {}
